header created and linked up to favorites and home.

--- a/src/app/favorites/favorites.component.html
+++ b/src/app/favorites/favorites.component.html
@@ -1,1 +1,5 @@
-
+<app-header></app-header>
+<h1>Favorite Recipes:</h1>
+<app-filter-recipes></app-filter-recipes>
+<!-- <app-recipe-card></app-recipe-card> -->
+<app-footer></app-footer>
