--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,8 @@
-
+<header>
+  <h1><a routerLink="/home">NetRecipe</a></h1>
+  <nav>
+    <ul>
+      <li><a routerLink="/favorites">Favorite Recipes</a></li>
+    </ul>
+  </nav>
+</header>
