added a search form to the home component and created the logic for submission and display of the results using the search-recipes component as well as a few additions to the service.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<app-search-recipes></app-search-recipes>
+<app-search-recipes (searchEvent)="onSubmit($event)"></app-search-recipes>
 <app-filter-recipes></app-filter-recipes>
 <!-- <ul *ngFor="let recipe of recipeData?.data; index as i" [recipeRef]="recipe"> -->
 <app-recipe-card
