--- a/src/app/recipe-card/recipe-card.component.html
+++ b/src/app/recipe-card/recipe-card.component.html
@@ -3,10 +3,15 @@
 <p>{{ recipeRef.recipe.dietLabels }}</p>
 <p>{{ recipeRef.recipe.healthLabels }}</p>
 <p>{{ recipeRef.recipe.cautions }}</p>
-<!-- <ul>
+<ul>
   <li *ngFor="let ingredient of recipeRef?.recipe.ingredientLines; index as i">
     <p>{{ ingredient }}</p>
   </li>
 </ul>
-<p>{{ recipeRef.recipe.calories }}</p> -->
-<button>Favorite</button>
+<p>{{ recipeRef.recipe.calories }}</p>
+<button
+  (click)="emitFavoriteEvent(recipeRef)"
+  [ngClass]="{ favorite: checkFavorite(recipeRef) }"
+>
+  Favorite
+</button>
