fixed favorite toggling so that it adds and removes with one function.

--- a/src/app/favorites/favorites.component.html
+++ b/src/app/favorites/favorites.component.html
@@ -5,5 +5,7 @@
   *ngFor="let favorite of favoriteRecipes"
   [recipeRef]="favorite"
   [favoritesRef]="favoriteRecipes"
-></app-recipe-card>
+  (toggleEvent)="onFavorite($event)"
+>
+</app-recipe-card>
 <app-footer></app-footer>
