--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
   *ngFor="let recipe of recipeData?.hits; index as i"
   [recipeRef]="recipe"
   [favoritesRef]="favoriteRecipes"
-  (favoriteEvent)="onFavorite($event)"
+  (toggleEvent)="onFavorite($event)"
 ></app-recipe-card>
 <!-- </ul> -->
 <app-footer></app-footer>
