--- a/src/app/recipe-card/recipe-card.component.html
+++ b/src/app/recipe-card/recipe-card.component.html
@@ -10,7 +10,7 @@
 </ul>
 <p>{{ recipeRef.recipe.calories }}</p>
 <button
-  (click)="emitFavoriteEvent(recipeRef)"
+  (click)="emitToggleEvent(recipeRef)"
   [ngClass]="{ favorite: checkFavorite(recipeRef) }"
 >
   Favorite
