--- a/src/app/fourohfour/fourohfour.component.html
+++ b/src/app/fourohfour/fourohfour.component.html
@@ -1,1 +1,4 @@
-<p>fourohfour works!</p>
+<app-header></app-header>
+<h1>Oops! Your recipes are in another cupboard.</h1>
+<img src="../../assets/images/emptycupboard.png" alt="empty cupboard" />
+<h3><a routerLink="/home">Click here to go back to the home page.</a></h3>
