wrote the footer html and put a red background on the button for favorites when toggled.

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,9 @@
-<p>footer works!</p>
+<footer>
+  <h1><a routerLink="/home">NetRecipe</a></h1>
+  <nav>
+    <ul>
+      <li><a routerLink="/favorites">Favorite Recipes</a></li>
+      <li>Sloppywrite 2021 - Grand Circus - Group #5 - Angular Project</li>
+    </ul>
+  </nav>
+</footer>
