small commit with quantity implimentation

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,11 +2,28 @@
 <app-search-recipes (searchEvent)="onSubmit($event)"></app-search-recipes>
 
 <!-- <ul *ngFor="let recipe of recipeData?.data; index as i" [recipeRef]="recipe"> -->
+<!-- <form #recipeQuantity="ngForm" ng(submit)="onQtySubmit()">
+  <select name="quantity" id="quantity">
+    <option disabled>Select Display Result Quantity(default 25)</option>
+    <option *ngFor="let quantity of quantities"> {{</option>
+  </select>
+</form> -->
+
+<div>
+  <select (change)="selectOption($event.target.value)" [(ngModel)]="selected">
+    <option [value]="item.id" *ngFor="let item of displayQtys">
+      {{ item.name }}
+    </option>
+  </select>
+</div>
+
 <app-recipe-card
   *ngFor="let recipe of recipeData?.hits; index as i"
   [recipeRef]="recipe"
   [favoritesRef]="favoriteRecipes"
   (toggleEvent)="onFavorite($event)"
 ></app-recipe-card>
+<button (click)="getPreviousRecipes()">Next Page</button>
+<button (click)="getNextRecipes()">Previous Page</button>
 <!-- </ul> -->
 <app-footer></app-footer>
