rewrote the excessive API calls to get an initial get and then array methods. Page display and pagination as well

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
 </div>
 
 <app-recipe-card
-  *ngFor="let recipe of recipeData?.hits; index as i"
+  *ngFor="let recipe of recipeDataShown"
   [recipeRef]="recipe"
   [favoritesRef]="favoriteRecipes"
   (toggleEvent)="onFavorite($event)"
