replaced excessive api calls with one one load or search and the rest is all array methods. added display features.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,6 +13,7 @@
   [favoritesRef]="favoriteRecipes"
   (toggleEvent)="onFavorite($event)"
 ></app-recipe-card>
+<!-- the new buttons -->
 <button (click)="getPreviousRecipes()">Previous Page</button>
 <button (click)="getNextRecipes()">Next Page</button>
 <app-footer></app-footer>
