--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,8 +1,8 @@
-<footer>
-  <h1><a routerLink="/home">NetRecipe</a></h1>
+<footer class="footer">
+  <h1><a routerLink="/home" class="a">NetRecipe</a></h1>
   <nav>
     <ul>
-      <li><a routerLink="/favorites">Favorite Recipes</a></li>
+      <li><a routerLink="/favorites" class="a">Favorite Recipes</a></li>
       <li>Sloppywrite 2021 - Grand Circus - Group #5 - Angular Project</li>
     </ul>
   </nav>
