--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,16 @@
-<header>
-  <h1><a routerLink="/home">NetRecipe</a></h1>
-  <nav>
-    <ul>
-      <li><a routerLink="/favorites">Favorite Recipes</a></li>
+<header class="header-container">
+  <h1 class="logo-h1">
+    <a class="logo-anchor" routerLink="/home">Reciprocity</a>
+  </h1>
+  <nav class="nav-class">
+    <ul class="nav-ul">
+      <li class="nav-li">
+        <button class="header-button">
+          <a class="nav-anchor favorite-rep" routerLink="/favorites"
+            >Favorite Recipes</a
+          >
+        </button>
+      </li>
     </ul>
   </nav>
 </header>
