--- a/src/app/recipe-card/recipe-card.component.html
+++ b/src/app/recipe-card/recipe-card.component.html
@@ -1,4 +1,4 @@
-<p>{{ recipeRef.recipe.label }}</p>
+<p class="card-label">{{ recipeRef.recipe.label }}</p>
 <img src="{{ recipeRef.recipe.image }}" class="image" />
 <div class="labels">
   <p>Diet Label: {{ recipeRef.recipe.dietLabels }}</p>
